--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "react-snowfall": "^2.1.0",
     "sass": "^1.72.0"
   },
   "devDependencies": {
